# ai-agent-memory-mcp

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  README.zh.md  pyproject.toml  requirements.txt  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
ai_agent_memory_mcp/: __init__.py  __main__.py  cli.py  config.py  embedding.py  journal.py  markdown.py  schema.py  search.py  server.py  store.py  vector.py
ai_memory/: __init__.py  __main__.py  cli.py  config.py  embedding.py  links.py  schema.py  search.py  server.py  store.py  vector.py
tests/: e2e_check.py  rebuild_vectors.py  test_journal.py  test_links.py  test_markdown.py  test_search.py  test_store.py
