[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-memory-mcp"
version = "0.1.1"
description = "独立于具体 Agent 的持久化记忆层 (MCP Server),可被 Claude Code / Qoder / Cursor 复用"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xiangzi1126" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "memory",
    "claude-code",
    "persistent-memory",
    "agent-memory",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb>=0.5.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xiangzi1126/ai-agent-memory-mcp"
Repository = "https://github.com/xiangzi1126/ai-agent-memory-mcp"
Issues = "https://github.com/xiangzi1126/ai-agent-memory-mcp/issues"
Changelog = "https://github.com/xiangzi1126/ai-agent-memory-mcp/releases"

[project.scripts]
ai-memory = "ai_memory.__main__:main"

[tool.setuptools.packages.find]
include = ["ai_memory*"]
